{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 15,
  "lineage": "dba5903d-a34b-8a5b-193e-22fd8cf51a73",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "zero_trust_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d001f8052688dc45",
            "arn": "arn:aws:ec2:us-east-1:048333961515:instance/i-07125a0c517e8ab9c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Titan-SSM-Profile",
            "id": "i-07125a0c517e8ab9c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00359cc3a582f3cfa"
              }
            ],
            "primary_network_interface_id": "eni-00359cc3a582f3cfa",
            "private_dns": "ip-10-0-1-248.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.248",
            "public_dns": "ec2-100-55-91-77.compute-1.amazonaws.com",
            "public_ip": "100.55.91.77",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fb84b7f588f1f15f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0682daff406436ddb",
            "tags": {
              "Name": "titan-prod-server"
            },
            "tags_all": {
              "Name": "titan-prod-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0246fcba971aedbda"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "048333961515",
            "id": "i-07125a0c517e8ab9c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.zero_trust_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.titan_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:048333961515:internet-gateway/igw-04d50ad3fc58dae1e",
            "id": "igw-04d50ad3fc58dae1e",
            "owner_id": "048333961515",
            "region": "us-east-1",
            "tags": {
              "Name": "Titan-IGW"
            },
            "tags_all": {
              "Name": "Titan-IGW"
            },
            "vpc_id": "vpc-00724340a5386e665"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "048333961515",
            "id": "igw-04d50ad3fc58dae1e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.titan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:048333961515:route-table/rtb-0a0eb6cba81893b4f",
            "id": "rtb-0a0eb6cba81893b4f",
            "owner_id": "048333961515",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d50ad3fc58dae1e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Titan-Public-RouteTable"
            },
            "tags_all": {
              "Name": "Titan-Public-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-00724340a5386e665"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "048333961515",
            "id": "rtb-0a0eb6cba81893b4f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.titan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075e4015cecda93b8",
            "region": "us-east-1",
            "route_table_id": "rtb-0a0eb6cba81893b4f",
            "subnet_id": "subnet-0682daff406436ddb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "048333961515",
            "id": "rtbassoc-075e4015cecda93b8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.titan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zero_trust_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:048333961515:security-group/sg-0246fcba971aedbda",
            "description": "No inbound traffic allowed. Only outbound traffic.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0246fcba971aedbda",
            "ingress": [],
            "name": "titan-zero-trust-sg",
            "name_prefix": "",
            "owner_id": "048333961515",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Titan-ZeroTrust-SG"
            },
            "tags_all": {
              "Name": "Titan-ZeroTrust-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00724340a5386e665"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "048333961515",
            "id": "sg-0246fcba971aedbda",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.titan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:048333961515:subnet/subnet-0682daff406436ddb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0682daff406436ddb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "048333961515",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Titan-Public-Subnet"
            },
            "tags_all": {
              "Name": "Titan-Public-Subnet"
            },
            "vpc_id": "vpc-00724340a5386e665"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "048333961515",
            "id": "subnet-0682daff406436ddb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.titan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "titan_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:048333961515:vpc/vpc-00724340a5386e665",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-076cdc0da324a62ab",
            "default_route_table_id": "rtb-0ee753f613d882f36",
            "default_security_group_id": "sg-04b52446ef7025ab7",
            "dhcp_options_id": "dopt-0a0ade76abc616d49",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00724340a5386e665",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee753f613d882f36",
            "owner_id": "048333961515",
            "region": "us-east-1",
            "tags": {
              "Name": "Titan-Prod-VPC"
            },
            "tags_all": {
              "Name": "Titan-Prod-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "048333961515",
            "id": "vpc-00724340a5386e665",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}